fixed spacing between user image and tag on home page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -42,6 +42,11 @@ h4 {
     margin-bottom:5px;
 }
 
+.photos{
+  margin-top: 7px;
+}
+
+
 //HERE IS WHERE KENDRA STARTED WORKING
 
 .body {
